<resources>
    <string name="app_name">Cs309_CyNote</string>
    <string name="CyNote">CyNote</string>
    <string name="create_account">Create an Account:</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="account_type">Account Type</string>
    <string name="submit">Submit</string>

    <string-array name="account_types">
        <item>Professor</item>
        <item>TA</item>
        <item>Student</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login">Login</string>
    <string name="login_successful">Login Successful</string>
    <string name="new_user">New user?</string>
    <string name="back">Back</string>

    <string name="temp_to_class_select">Temp: Goto Class Selection</string>

    <!-- Class Selection -->
    <string name="class_selection">Class Selection:</string>
    <string name="sample_class">Sample Class</string>
    <string name="sample_class1">CprE 381</string>
    <string name="sample_class2">CprE 309</string>
    <string name="sample_class3">ComS 330</string>
    <string name="sign_out">Sign Out</string>

    <string name="professor_page">Professor page</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="add_to_class">Add to Class</string>
    <string name="cynote">CyNote</string>
    <string name="log_out">log out</string>
    <string name="logout">logout</string>
    <string name="cancel">Cancel</string>
    <string name="goback">GoBack</string>
    <string name="test_prof">Test:Prof</string>
    <string name="test_ta">Test:TA</string>
    <string name="test_stud">Test:Stud</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="student_page">Student Page</string>
    <string name="ta_page">TA Page</string>

    <!-- Notes -->
    <string name="notes">Sample Notes</string>
    <string name="cy_notes">CyNotes</string>

    <!-- Module Selection -->
    <string name="class_name">Class Name</string>
    <string-array name="module_list">
        <item>Lecture 4
            <string-array name="lec4_modules">
                <string name="lec4_shoutout">Shoutout\n</string>
                <string name="lec4_notes1">Notes(Collaborative)</string>
            </string-array>
        </item>
        <item>Lecture 5
            <string-array name="lec5_modules">
                <string name="lec5_shoutout">Shoutout</string>
                <string name="lec5_notes1">Notes(Collaborative)</string>
                <string name="lec5_notes2">Notes(StudentID)</string>
            </string-array>
        </item>
        <item>Lecture 6
            <string-array name="lec6_modules">
                <string name="lec6_shoutout">Shoutout</string>
                <string name="lec6_notes1">Notes(Collaborative)</string>
            </string-array>
        </item>
    </string-array>
    <string name="notes_collab">Notes(Collaborative)</string>
    <string name="shoutout">Shoutout</string>
    <string name="select_class">Select class</string>
    <string name="type_class_name">Type class name</string>
    <string name="update">Update</string>
    <string name="add_new_class">Add New Class</string>

</resources>
